simplify store and options

--- a/pizza/options.html
+++ b/pizza/options.html
@@ -32,13 +32,13 @@ body {
 <h2>Mode</h2>
 
 <p>
-	<label for="toggleMode">Toggle class name on and off</label>
-	<input id="toggleMode" name="action" type="radio">
+	<label for="toggle">Toggle class name on and off</label>
+	<input id="toggle" name="action" type="radio">
 </p>
 
 <p>
-	<label for="swapMode">Swap class A for B</label>
-	<input id="swapMode" name="action" type="radio">
+	<label for="swap">Swap class A for B</label>
+	<input id="swap" name="action" type="radio">
 </p>
 
 
