--- a/test.html
+++ b/test.html
@@ -15,3 +15,5 @@
 <h1>ohai!</h1>
 
 <p>this is some text</p>
+<p>this is a paragraph</p>
+<p class="test-class">this is a paragraph with a className</p>
