options page text

--- a/pizza/options.html
+++ b/pizza/options.html
@@ -59,7 +59,7 @@ input {
 
 <h1>Experimental Pizza</h1>
 
-<p>Toggle a class name on the body element with a click.</p>
+<p>Toggle a class name on an element by clicking the pizza extension icon.</p>
 
 <label for="toggleClass">Class Name to Toggle</label>
 <input id="toggleClass" type="text">
